- Fix dashboard panel XY sorting as an attempt to fix ordering in one column mode. - Removed dashboard panel drag handle on mobile devices.

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -4696,6 +4696,8 @@ mat-tab-group
             text-overflow: ellipsis
             white-space: nowrap
             overflow: hidden
+        .msf-dashboard-panel-title-label-mobile
+            width: calc(100% - 47px)
         .msf-dashboard-panel-title-label-read-only
             width: calc(100% - 27px) !important
         .msf-dashboard-panel-title-label-public-mobile
